--- a/Dashboard/DashboardWebApp/Pages/Shared/_LoginPartial.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 @using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<DashboardWebApp.Models.User> SignInManager
+@inject UserManager<DashboardWebApp.Models.User> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
