--- a/Dashboard/DashboardWebApp/Pages/Shared/_Layout.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/Shared/_Layout.cshtml
@@ -33,28 +33,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/RSUs/Index">RSU</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-        <!-- Sidebar -->
-        <div class="box-shadow" id="sidebar-wrapper">
-            <a class="navbar-brand" asp-area="" asp-page="/Index">DashboardWebApp</a>
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="#">
-                        Start Bootstrap
-                    </a>
-                </li>
-                <li>
-                    <a href="#">Dashboard</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /#sidebar-wrapper -->
 
         <div class="container">
             <partial name="_CookieConsentPartial" />
