--- a/Dashboard/DashboardWebApp/Pages/Managers/Edit.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/Managers/Edit.cshtml
@@ -6,18 +6,30 @@
 }
 
 <h1>Edit</h1>
+<h2>Manager</h2>
 
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
+
+<form method="post">
+    <div class="row">
+        <div class="col-md-4">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @await Component.InvokeAsync("EditManager", Model.ManagerEditM)
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <h4>Managers Users</h4>
+            @await Component.InvokeAsync("EditManagerUser", Model.ManagerEditM.ManagerUserEditModels)
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
             <div class="form-group">
                 <input type="submit" value="Save" class="btn" />
             </div>
-        </form>
+        </div>
     </div>
-</div>
+</form>
 
 <div>
     <a asp-page="./Index">Back to List</a>
