--- a/Dashboard/DashboardWebApp/Pages/Shared/_Layout.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/Shared/_Layout.cshtml
@@ -36,7 +36,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Managers/Index">Managers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/RSUs/Index">RSU</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/RSUs/Index">RSUs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Users/Index">Users</a>
                         </li>
                     </ul>
                 </div>
