Removed Docker from Web API. Add RSU healtchecker to Web API and Dashboard

--- a/Dashboard/DashboardWebApp/Pages/Index.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/Index.cshtml
@@ -7,4 +7,5 @@
 <div class="text-center">
     <h1 class="display-4">RSU Device Manager</h1>
     <p>Device Manager System for C-ITS RSUs</p>
+    @await Component.InvokeAsync("DashboardDownRSUs", Model.DownRSUs)
 </div>
