Added Map component to the Dashboard

--- a/Dashboard/DashboardWebApp/Pages/Components/DashboardDownRSUs/DownRsus.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/Components/DashboardDownRSUs/DownRsus.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DashboardWebApp.Models.RSU>
 
-<table>
+<table width="100%">
     <thead>
         <tr>
             <td>Name</td>
