--- a/Dashboard/DashboardWebApp/Pages/Components/EditManager/Edit.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/Components/EditManager/Edit.cshtml
@@ -22,3 +22,15 @@
     <input asp-for="Port" class="form-control" />
     <span asp-validation-for="Port" class="text-danger"></span>
 </div>
+
+<div class="form-group">
+    <label asp-for="Latitude" class="custom-control-label"></label>
+    <input asp-for="Latitude" class="form-control" />
+    <span asp-validation-for="Latitude" class="text-danger"></span>
+</div>
+
+<div class="form-group">
+    <label asp-for="Longitude" class="custom-control-label"></label>
+    <input asp-for="Longitude" class="form-control" />
+    <span asp-validation-for="Longitude" class="text-danger"></span>
+</div>
