--- a/Dashboard/DashboardWebApp/Pages/RSUs/Index.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/RSUs/Index.cshtml
@@ -33,21 +33,21 @@
     <tbody>
         @foreach (var rsu in Model.RSUs)
         {
-            <tr class="@(rsu.Active ? "table-success" : "table-danger")">
-            
-                <td>@rsu.Name</td>
-                <td>@rsu.IP.ToString() / @rsu.Port</td>
-                <td>@rsu.Manager.Name</td>
-                <td>@rsu.Manager.IP / @rsu.Manager.Port</td>
-                <td>@rsu.NotificationIP / @rsu.NotificationPort</td>
-                <td>@rsu.Latitude</td>
-                <td>@rsu.Longitude</td>
-                <td>@(rsu.Active? "Active" : "Inactive")</td>
-                <td><a asp-page="../TrapLogs/Index" asp-route-managerId="@rsu.Manager.Id" asp-route-rsuId="@rsu.Id">Trap Logs</a></td>
-                <td><a asp-page="./Edit" asp-route-id="@rsu.Id" asp-route-managerid="@rsu.Manager.Id">Edit</a></td>
-                <td><a asp-page="./Delete" asp-route-id="@rsu.Id" asp-route-managerId="@rsu.Manager.Id">Delete</a></td>
-                <td><a asp-page="./SnmpGET" asp-route-rsuId="@rsu.Id" asp-route-managerId="@rsu.Manager.Id">SNMP GET</a></td>
-            </tr>
+        <tr class="@(rsu.Active ? "table-success" : "table-danger")">
+
+            <td>@rsu.Name</td>
+            <td>@rsu.IP.ToString() / @rsu.Port</td>
+            <td>@rsu.Manager.Name</td>
+            <td>@rsu.Manager.IP / @rsu.Manager.Port</td>
+            <td>@rsu.NotificationIP / @rsu.NotificationPort</td>
+            <td>@rsu.Latitude</td>
+            <td>@rsu.Longitude</td>
+            <td>@(rsu.Active ? "Active" : "Inactive")</td>
+            <td><a asp-page="../TrapLogs/Index" asp-route-managerId="@rsu.Manager.Id" asp-route-rsuId="@rsu.Id">Trap Logs</a></td>
+            <td><a asp-page="./Edit" asp-route-id="@rsu.Id" asp-route-managerid="@rsu.Manager.Id">Edit</a></td>
+            <td><a asp-page="./Delete" asp-route-id="@rsu.Id" asp-route-managerId="@rsu.Manager.Id">Delete</a></td>
+            <td><a asp-page="./Details" asp-route-rsuId="@rsu.Id" asp-route-managerId="@rsu.Manager.Id">Details</a></td>
+        </tr>
         }
     </tbody>
 </table>
