Fixed Manager edit. Modified layout across the dashboard.

--- a/Dashboard/DashboardWebApp/Pages/Components/DashboardDownRSUs/DownRsus.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/Components/DashboardDownRSUs/DownRsus.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<DashboardWebApp.Models.RSU>
 
-<table width="100%">
-    <thead>
+<table width="100%" class="table table-borderless table-sm">
+    <thead class="thead-dark">
         <tr>
-            <td>Name</td>
-            <td>Manager</td>
-            <td>Position</td>
+            <th>Name</th>
+            <th>Manager</th>
+            <th>Position</th>
         </tr>    
     </thead>
     <tbody>
