--- a/Dashboard/DashboardWebApp/Pages/TrapLogs/Index.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/TrapLogs/Index.cshtml
@@ -8,13 +8,13 @@
 <h1>Trap Logs</h1>
 <h2>@Model.Manager.Name (@Model.Manager.IP / @Model.Manager.Port)</h2>
 
-<table class="table">
-    <thead>
+<table class="table table-sm table-hover">
+    <thead class="thead-dark">
         <tr>
-            <td>RSU</td>
-            <td>Timestamp</td>
-            <td>Type</td>
-            <td>Message</td>
+            <th>RSU</th>
+            <th>Timestamp</th>
+            <th>Type</th>
+            <th>Message</th>
         </tr>
     </thead>
     <tbody>
