--- a/Dashboard/DashboardWebApp/Pages/Users/Index.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/Users/Index.cshtml
@@ -8,9 +8,10 @@
 <h1>Users</h1>
 
 <table class="table">
-    <thead>
+    <thead class="thead-dark">
         <tr>
-            <td><label asp-for="@Model.Users[0].UserName"></label></td>
+            <th>Username</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
