--- a/Dashboard/DashboardWebApp/Pages/Managers/Edit.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/Managers/Edit.cshtml
@@ -6,30 +6,29 @@
 }
 
 <h1>Edit</h1>
-<h2>Manager</h2>
+<div class="row"> <div class="col-lg-12"><h2>Manager</h2></div></div>
 
-
-<form method="post">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-lg-12">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @await Component.InvokeAsync("EditManager", Model.ManagerEditM)
+            @await Component.InvokeAsync("EditManager", Model.ManagerEditModel)
         </div>
     </div>
+<br />
     <div class="row">
         <div class="col-12">
-            <h4>Managers Users</h4>
-            @await Component.InvokeAsync("EditManagerUser", Model.ManagerEditM.ManagerUserEditModels)
+            <h4 class="text-info">Managers Users</h4>
+            @await Component.InvokeAsync("EditManagerUser", Model.ManagerUserEditModels)
         </div>
     </div>
-    <div class="row">
+    @*<div class="row">
         <div class="col-md-4">
             <div class="form-group">
                 <input type="submit" value="Save" class="btn" />
             </div>
         </div>
-    </div>
-</form>
+    </div>*@
+
 
 <div>
     <a asp-page="./Index">Back to List</a>
